topnumber looks good, color bar works again, second-page graph is unbroken. STILL NEEDS COMMAS.

--- a/index.html
+++ b/index.html
@@ -515,16 +515,16 @@ publications and research grants.
                 <!--closes div department lists-->
             </div>
             <!--closes div deaprtments heading-->
+            <div id="bottom">
+                <p><a href="second-page.html" class="photo">Break down the numbers --></a></p>
+            </div>
         </div>
         <!-- closes the hold-text div -->
         <!-- <div class="heading" id="cuts">
                         <div id="boxes"></div>
                     </div> -->
         <!--closes div cuts heading-->
-        </div>
-        <div id="bottom">
-            <p><a href="second-page.html" class="photo">Go on to the next page --></a></p>
-        </div>
+
         <!--closes div cuts heading-->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
