--- a/second-page.html
+++ b/second-page.html
@@ -18,8 +18,8 @@
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-      	  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js "></script>
-      	  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js "></script>
+      	  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      	  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
       	<![endif]-->
     </head>
 
@@ -38,7 +38,7 @@
                 coming out of a lot of departments."</p>
 
             <p class="top-text">But the Trump administration has said this budget represents the kind of change in priorities that Trump promised to make.</p>
-            <p class="top-text ">"This is the message the president wanted to send to the public, to the press, to Capitol Hill. He wanted more money for defense, more money for border enforcement, more money for law enforcement generally, more money for the vets, more money
+            <p class="top-text">"This is the message the president wanted to send to the public, to the press, to Capitol Hill. He wanted more money for defense, more money for border enforcement, more money for law enforcement generally, more money for the vets, more money
                 for school choice," said director of the Office of Management and Budget Mick Mulvaney during a press conference on March. "This budget simply reallocates and re-prioritizes spending."</p>
             <figure class="mulvaney"><img src="images/mulvaney.jpg" class=mulvaney>
                 <figcaption>Mick Mulvaney, director of the Office of Management and Budget, rolled out Trump's budget proposal last month.</figcaption>
@@ -47,31 +47,31 @@
 
             </figure>
             <h2 class="big-text2">So how do those cuts look all together?</h2>
-            <iframe id="datawrapper-chart-naiKF " src="//datawrapper.dwcdn.net/naiKF/3/ " frameborder="0 " allowtransparency="true " allowfullscreen="allowfullscreen " webkitallowfullscreen="webkitallowfullscreen " mozallowfullscreen="mozallowfullscreen
-                " oallowfullscreen="oallowfullscreen " msallowfullscreen="msallowfullscreen " width="100% " height="600 "></iframe>
-            <script type="text/javascript ">
-                if ("undefined " == typeof window.datawrapper) window.datawrapper = {};
-                window.datawrapper["naiKF "] = {}, window.datawrapper["naiKF "].embedDeltas = {
-                    "100 ": 680.33334,
-                    "200 ": 600.33334,
-                    "300 ": 573.33334,
-                    "400 ": 573.33334,
-                    "500 ": 547.33334,
-                    "600 ": 547.33334,
-                    "700 ": 547.33334,
-                    "800 ": 547.33334,
-                    "900 ": 547.33334,
-                    "1000 ": 547.33334
-                }, window.datawrapper["naiKF "].iframe = document.getElementById("datawrapper-chart-naiKF "), window.datawrapper["naiKF "].iframe.style.height = window.datawrapper["naiKF "].embedDeltas[Math.min(1e3, Math.max(100 * Math.floor(
+            <iframe id="datawrapper-chart-naiKF" src="http://datawrapper.dwcdn.net/naiKF/3/" frameborder="0" allowtransparency="true" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen"
+                msallowfullscreen="msallowfullscreen" width="100%" height="600"></iframe>
+            <script type="text/javascript">
+                if ("undefined" == typeof window.datawrapper) window.datawrapper = {};
+                window.datawrapper["naiKF"] = {}, window.datawrapper["naiKF"].embedDeltas = {
+                    "100": 680.33334,
+                    "200": 600.33334,
+                    "300": 573.33334,
+                    "400": 573.33334,
+                    "500": 547.33334,
+                    "600": 547.33334,
+                    "700": 547.33334,
+                    "800": 547.33334,
+                    "900": 547.33334,
+                    "1000": 547.33334
+                }, window.datawrapper["naiKF"].iframe = document.getElementById("datawrapper-chart-naiKF"), window.datawrapper["naiKF"].iframe.style.height = window.datawrapper["naiKF"].embedDeltas[Math.min(1e3, Math.max(100 * Math.floor(
                     window.datawrapper[
-                        "naiKF "].iframe.offsetWidth / 100), 100))] + "px ", window.addEventListener("message ", function(a) {
-                    if ("undefined " != typeof a.data["datawrapper-height "])
-                        for (var b in a.data["datawrapper-height "])
-                            if ("naiKF " == b) window.datawrapper["naiKF "].iframe.style.height = a.data["datawrapper-height "][b] + "px "
+                        "naiKF"].iframe.offsetWidth / 100), 100))] + "px", window.addEventListener("message", function(a) {
+                    if ("undefined" != typeof a.data["datawrapper-height"])
+                        for (var b in a.data["datawrapper-height"])
+                            if ("naiKF" == b) window.datawrapper["naiKF"].iframe.style.height = a.data["datawrapper-height"][b] + "px"
                 });
             </script>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js "></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
         <!-- Your javascript should be called here -->
     </body>
