STILL NEEDS BIGNUMBER COMMAS. green progressbar work

--- a/index.html
+++ b/index.html
@@ -70,67 +70,41 @@
                                   the country.</label>
                                     </li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="african-development" data-cut="28200000">
-                                        <label class="list">The African Development Foundation works with people in Africa to secure economic development and growth in the continent's
-                                most vulnerable communities.</label></li>
+                                        <label class="list">The African Development Foundation works with people in Africa to secure economic development and growth in the continent's most vulnerable communities.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="chemical-safety" data-cut="12436000">
-                                        <label class="list">The Chemical Safety and Hazard Investigation Board investigates chemical accidents and makes recommendations for accident
-prevention.</label></li>
+                                        <label class="list">The Chemical Safety and Hazard Investigation Board investigates chemical accidents and makes recommendations for accident prevention.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="national-and-community-service" data-cut="794608000">
-                                        <label class="list">The Corporation for National and Community Service is the nation's largest grant provider for community service
-and volunteer programs at local nonprofits, schools, community organizations, and governments</label></li>
+                                        <label class="list">The Corporation for National and Community Service is the nation's largest grant provider for community service and volunteer programs at local nonprofits, schools, community organizations, and governments</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="public-broadcasting" data-cut="445000000">
-                                        <label class="list">The Corporation for Public Broadcasting provide grants to public television and radio stations to support local programs
-and national distribution of shows like Frontline, Antiques Roadshow, and PBS Kids.</label></li>
+                                        <label class="list">The Corporation for Public Broadcasting provide grants to public television and radio stations to support local programs and national distribution of shows like Frontline, Antiques Roadshow, and PBS Kids.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="delta-regional-authority" data-cut="15936000">
-                                        <label class="list">The Delta Regional Authority supports disaster response, economic development investments, and healthcare access
-in the Mississippi Delta region.</label></li>
+                                        <label class="list">The Delta Regional Authority supports disaster response, economic development investments, and healthcare access in the Mississippi Delta region.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="denali" data-cut="11000000">
                                         <label class="list">The Denali Commission funds programs that promote health, safety and economic self-sufficiency within rural communities in Alaska.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="museum-and-library-services" data-cut="230000000">
-                                        <label class="list">The Institute of Museum and Library Services is the primary source of Federal support for the country's 123,000
-                                    libraries and 35,000 museums.
-                                    </label></li>
+                                        <label class="list">The Institute of Museum and Library Services is the primary source of Federal support for the country's 123,000 libraries and 35,000 museums.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="inter-american" data-cut="22200000">
-                                        <label class="list">
-                               The Inter-American Foundation invests in poor communities in Latin America and the Caribbean.</li>
-                               <li><input type="checkbox" name="independent-agency" class="subset" id="trade-and-development" data-cut="80700000">
-                                 <label class="list">The U.S. Trade and Development Agency helps companies create U.S. jobs by exporting U.S. goods and services to emerging
-                               economies
-                               </label></li>
+                                        <label class="list">The Inter-American Foundation invests in poor communities in Latin America and the Caribbean.</label></li>
+                                    <li><input type="checkbox" name="independent-agency" class="subset" id="trade-and-development" data-cut="80700000">
+                                        <label class="list">The U.S. Trade and Development Agency helps companies create U.S. jobs by exporting U.S. goods and services to emerging economies.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="legal-services" data-cut="475000000">
-                                        <label class="list">The Legal Services Corporation distributes funds to local organizations that provide free civil legal assistance to people
-                           living in poverty.
-                           </label></li>
+                                        <label class="list">The Legal Services Corporation distributes funds to local organizations that provide free civil legal assistance to people living in poverty.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="nea" data-cut="149849000">
-                                        <label class="list">The National Endowment for the Arts is the independent federal agency that supports and funds the arts in America.
-                       </label></li>
+                                        <label class="list">The National Endowment for the Arts is the independent federal agency that supports and funds the arts in America.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="neh" data-cut="149848000">
-                                        <label class="list">The National Endowment for the Humanities supports education, scholarship, and research and development in the humanities and preserves
-                   America's cultural and intellectual resources.
-                   </label></li>
+                                        <label class="list">The National Endowment for the Humanities supports education, scholarship, and research and development in the humanities and preserves America's cultural and intellectual resources.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="neighborhood-reinvestment" data-cut="140000000">
-                                        <label class="list">The Neighborhood Reinvestment Corporation provides financial support, technical assistance, and training for affordable
-               housing.
-               </label></li>
+                                        <label class="list">The Neighborhood Reinvestment Corporation provides financial support, technical assistance, and training for affordable housing.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="northern-border" data-cut="5000000">
-                                        <label class="list">The Northern Border Regional Commission addresses persistent economic distress in portions of Maine, New Hampshire, New York,
-           and Vermont by developing transportation, basic public infrastructure, and job skills training.
-           </label></li>
+                                        <label class="list">The Northern Border Regional Commission addresses persistent economic distress in portions of Maine, New Hampshire, New York, and Vermont by developing transportation, basic public infrastructure, and job skills training.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="overseas-private-investment" data-cut="88000000">
-                                        <label class="list">The Overseas Private Investment Corporation encourages American companies to invest in developing countries.
-       </label></li>
+                                        <label class="list">The Overseas Private Investment Corporation encourages American companies to invest in developing countries.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="institute-of-peace" data-cut="37884000">
-                                        <label class="list">The United States Institute of Peace is an independent, nonpartisan institution that works to prevent and resolve international
-   conflict without violence.
-   </label></li>
+                                        <label class="list">The United States Institute of Peace is an independent, nonpartisan institution that works to prevent and resolve international conflict without violence.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="council-on-homelessness" data-cut="3600000">
-                                        <label class="list">United States Interagency Council on Homelessness creates partnerships at every level of government and with the private
-sector to prevent and end homelessness.
-</label></li>
+                                        <label class="list">United States Interagency Council on Homelessness creates partnerships at every level of government and with the private sector to prevent and end homelessness.</label></li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="woodrow-wilson-center" data-cut="10400000">
-                                        <label class="list">The Woodrow Wilson International Center for Scholars shares research in the social sciences and humanities through conferences,
-publications and research grants.
-</label></li>
+                                        <label class="list">The Woodrow Wilson International Center for Scholars shares research in the social sciences and humanities through conferences, publications and research grants.</label></li>
                                 </div>
 
                         </details>
@@ -510,7 +484,6 @@ publications and research grants.
                             </ul>
                         </details>
                     </div>
-
                 </div>
                 <!--closes div department lists-->
             </div>
