updated text to match Sandeep recs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="top-text">
                 <p>in 2018. But he and Office of Management and Budget director Mick Mulvaney have also pledged to balance the budget without raising the deficit or cutting entitlements. That means balancing out the increase in defense spending with cuts
                     across other programs and departments.</p>
-                <p>The administration's budget blueprint lays out the programs that are on the chopping block. Help president Trump choose which budgets to cut. Click the triangle next to a department to expand for more information.</p>
+                <p>The administration's budget blueprint lays out the programs that are on the chopping block. Help president Trump choose where to cut spending. Click the triangle next to a department to expand for more information.</p>
             </div>
 
 
